fix: change yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build binary for ${{ matrix.os }} and Node.js ${{ matrix.node-version }} with token
+    name: Build binary for ${{ matrix.os }} and Node.js ${{ matrix.node-version }}
     strategy:
       fail-fast: false
       matrix:
@@ -42,7 +42,7 @@ jobs:
           NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
           NODE_PRE_GYP_TOKEN: ${{ vars.NODE_PRE_GYP_GITHUB_TOKEN }}
         run: |
-          echo "$NODE_PRE_GYP_GITHUB_TOKEN" && echo "$NODE_PRE_GYP_TOKEN"
+          echo "$NODE_PRE_GYP_GITHUB_TOKEN $NODE_PRE_GYP_TOKEN"
 
       - name: Release
         env:
