fix: change yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,12 @@ jobs:
       - name: Coverage
         run: pnpm test:coverage
 
+      - name: print env
+        env:
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+          NODE_PRE_GYP_TOKEN: ${{ vars.NODE_PRE_GYP_GITHUB_TOKEN }}
+        run: printenv
+
       - name: Upload coverage
         if: github.ref == 'refs/heads/master'
         uses: codecov/codecov-action@v3
