--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,13 +38,13 @@ jobs:
         run: pnpm binary:pack
 
       - name: print env
-        uses: echo
-        with:
-          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+        env:
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.TEST_KEY }}
           NODE_PRE_GYP_TOKEN: ${{ vars.NODE_PRE_GYP_GITHUB_TOKEN }}
+        run: printenv
 
       - name: Release
         env:
-          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.TEST_KEY }}
         run: | 
           pnpm binary:release
