--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@goblinalchemist/nodejieba",
   "description": "chinese word segmentation for node",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "author": "marui11@kuaishou.com",
   "license": "MIT",
   "maintainers": [
@@ -64,7 +64,14 @@
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.10",
     "node-addon-api": "^6.1.0",
-    "node-gyp": "^9.3.1"
+    "node-gyp": "^9.3.1",
+    "detect-libc": "2.0.1"
+  },
+  "overrides": {
+    "@mapbox/node-pre-gyp": {
+      "detect-libc": "2.0.1"
+    },
+    "detect-libc": "2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
